Revert "Bust cache for layout script"
This reverts commit aebdfc660a383d58f6a0f4fbd0766d0ea927c216.

--- a/public/changes.html
+++ b/public/changes.html
@@ -33,7 +33,7 @@
         load("https://www.clarity.ms/tag/v2u1vmbhil");
     })();
 </script>
-  <link rel="stylesheet" href="/assets/sitemap.css?v=20260127" />
+  <link rel="stylesheet" href="/assets/sitemap.css" />
 </head>
 <body class="text-slate-100 soft-bg min-h-screen">
   <!-- 공통 헤더 시작 -->
@@ -258,6 +258,6 @@
       document.getElementById("meta").innerHTML='<div class="text-red-500 font-bold">⚠ 데이터를 불러오지 못했습니다.</div>';
     });
   </script>
-  <script defer src='/assets/layout.js?v=20260127'></script>
+  <script defer src='/assets/layout.js'></script>
 </body>
 </html>
