--- a/public/updates.html
+++ b/public/updates.html
@@ -31,7 +31,7 @@
         load("https://www.clarity.ms/tag/v2u1vmbhil");
     })();
   </script>
-  <link rel="stylesheet" href="/assets/sitemap.css?v=20260127" />
+  <link rel="stylesheet" href="/assets/sitemap.css" />
 </head>
 <body class="text-slate-100 soft-bg min-h-screen">
   <div id="sitemap-panel-placeholder"></div>
@@ -231,6 +231,6 @@ document.getElementById("diff-modal-close").addEventListener("click", () => {
   }
 })();
 </script>
-<script defer src="/assets/layout.js?v=20260127"></script>
+<script defer src="/assets/layout.js"></script>
 </body>
 </html>
