Use sitemap panel placeholder

--- a/public/changes.html
+++ b/public/changes.html
@@ -84,64 +84,7 @@
   <!-- 공통 헤더 끝 -->
 
   <!-- 사이트맵 패널 시작 (layout.js에서 처리) -->
-  <div class="sitemap-panel" id="sitemapPanel">
-    <div class="sitemap-card">
-      <div class="flex justify-between items-center gap-2 mb-4">
-        <h3 class="text-xl font-bold m-0">사이트맵</h3>
-        <button class="btn sm" id="btnSitemapClose">닫기</button>
-      </div>
-      <div class="sitemap-grid">
-        <div class="sitemap-item">
-          <a href="/app.html">별첨서류 작성</a>
-          <div class="desc">[별지 제1호서식] + 부속서류 자동 생성</div>
-        </div>
-        <div class="sitemap-item">
-          <a href="/guide/허가_신고_개요.html">허가·신고 개요</a>
-          <div class="desc">처음 준비하는 사업자를 위한 이해 가이드</div>
-        </div>
-        <div class="sitemap-item">
-          <a href="/guide/별첨서류_안내.html">별첨서류 안내</a>
-          <div class="desc">설치내역서, 산정표, 공정도 등 별첨 설명</div>
-        </div>
-        <div class="sitemap-item">
-          <a href="/guide/대기오염물질_발생량_산정.html">발생량 산정 해설</a>
-          <div class="desc">배출계수·산정 오류·반려 사례 안내</div>
-        </div>
-        <div class="sitemap-item">
-          <a href="/guide/rejection_cases.html">반려 사례 모음</a>
-          <div class="desc">자주 반려되는 유형과 예방 체크리스트</div>
-        </div>
-        <div class="sitemap-item">
-          <a href="/guide/emission_calc_mistakes.html">발생량 산정 실수 방지</a>
-          <div class="desc">단위·계수·합산 오류를 막는 단계별 점검</div>
-        </div>
-        <div class="sitemap-item">
-          <a href="/faq.html">FAQ</a>
-          <div class="desc">자주 묻는 질문 모음</div>
-        </div>
-        <div class="sitemap-item">
-          <a href="/about.html">About</a>
-          <div class="desc">서비스 운영 안내</div>
-        </div>
-        <div class="sitemap-item">
-          <a href="/privacy.html">Privacy</a>
-          <div class="desc">개인정보 처리 방침</div>
-        </div>
-        <div class="sitemap-item">
-          <a href="/terms.html">Terms</a>
-          <div class="desc">이용약관</div>
-        </div>
-        <div class="sitemap-item">
-          <a href="/disclaimer.html">Disclaimer</a>
-          <div class="desc">면책 및 고지</div>
-        </div>
-        <div class="sitemap-item">
-          <a href="/contact.html">Contact</a>
-          <div class="desc">문의/오류 제보</div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <div id="sitemap-panel-placeholder"></div>
   <!-- 사이트맵 패널 끝 -->
 
   <main class="max-w-6xl mx-auto px-4 py-8">
