--- a/public/updates.html
+++ b/public/updates.html
@@ -165,7 +165,13 @@
         return;
       }
       const rows = items.map(it => {
-        const diffBtn = it.diff_url ? `<button class="px-3 py-1 text-sm bg-sky-600 hover:bg-sky-500 rounded-md diff-btn" data-url="${esc(it.diff_url)}">보기</button>` : '';
+        let url = it.diff_url;
+        if (!url) {
+          if (it.kind === '법령') url = `https://www.law.go.kr/법령/${it.title}`;
+          else if (it.kind === '고시') url = `https://www.law.go.kr/행정규칙/${it.title}`;
+          else if (it.kind === '의안') url = `https://likms.assembly.go.kr/bill/billDetail.do?billId=${it.id}`;
+        }
+        const diffBtn = url ? `<a href="${esc(url)}" target="_blank" class="px-3 py-1 text-sm bg-sky-600 hover:bg-sky-500 rounded-md inline-block text-white no-underline">보기</a>` : '';
         const statusClass = it.status === 'NEW' ? 'text-green-400' : 'text-yellow-400';
         // Use mapped status or original if not found
         const displayStatus = STATUS_MAP[it.status] || it.status_ko || it.status;
