--- a/public/updates.html
+++ b/public/updates.html
@@ -167,15 +167,11 @@
       const rows = items.map(it => {
         let url = it.diff_url;
         if (!url) {
-          if (it.kind === '법령') {
-            const dateParam = it.date ? `/${it.date.replace(/\./g, "").replace(/-/g, "")}` : "";
-            url = `https://www.law.go.kr/법령/${it.title}${dateParam}`;
+          if (it.kind === '의안') url = `https://likms.assembly.go.kr/bill/billDetail.do?billId=${it.id}`;
+          else {
+            // Fallback: 법령/행정규칙은 ID가 없으면 '통합검색'으로 보냄 (한글주소 오류 방지)
+            url = `https://www.law.go.kr/LSW/lsSc.do?menuId=1&query=${encodeURIComponent(it.title)}`;
           }
-          else if (it.kind === '고시') {
-            const dateParam = it.date ? `/${it.date.replace(/\./g, "").replace(/-/g, "")}` : "";
-            url = `https://www.law.go.kr/행정규칙/${it.title}${dateParam}`;
-          }
-          else if (it.kind === '의안') url = `https://likms.assembly.go.kr/bill/billDetail.do?billId=${it.id}`;
         }
         const diffBtn = url ? `<a href="${esc(url)}" target="_blank" class="px-3 py-1 text-sm bg-sky-600 hover:bg-sky-500 rounded-md inline-block text-white no-underline">보기</a>` : '';
         const statusClass = it.status === 'NEW' ? 'text-green-400' : 'text-yellow-400';
