--- a/public/updates.html
+++ b/public/updates.html
@@ -90,7 +90,7 @@
     </section>
     <section class="bg-slate-800/50 p-6 rounded-xl shadow-lg">
       <div class="search-bar mb-4 flex gap-4 items-center flex-wrap">
-        <label for="startDate" class="text-slate-300">변경 감지일:</label>
+        <label for="startDate" class="text-slate-300">확인일 조회:</label>
         <input type="date" id="startDate" class="bg-slate-700 border-slate-600 rounded-lg p-2 text-slate-300">
         <span>-</span>
         <input type="date" id="endDate" class="bg-slate-700 border-slate-600 rounded-lg p-2 text-slate-300">
