--- a/public/updates.html
+++ b/public/updates.html
@@ -102,12 +102,12 @@
         <table class="w-full text-left border-collapse">
           <thead>
             <tr class="bg-slate-700/50">
-              <th class="p-3">상태</th>
-              <th>구분</th>
-              <th>제목</th>
-              <th>공포/제안일</th>
-              <th>감지일(UTC)</th>
-              <th>변경내용</th>
+              <th class="p-3 text-center">상태</th>
+              <th class="p-3 text-center">구분</th>
+              <th class="p-3 text-left">제목</th>
+              <th class="p-3 text-center">공포/제안일</th>
+              <th class="p-3 text-center">시스템 확인일</th>
+              <th class="p-3 text-center">상세정보</th>
             </tr>
           </thead>
           <tbody id="tbody" class="divide-y divide-slate-700">
@@ -169,22 +169,34 @@
         if (!url) {
           if (it.kind === '의안') url = `https://likms.assembly.go.kr/bill/billDetail.do?billId=${it.id}`;
           else {
-            // Fallback: 법령/행정규칙은 ID가 없으면 '통합검색'으로 보냄 (한글주소 오류 방지)
             url = `https://www.law.go.kr/LSW/lsSc.do?menuId=1&query=${encodeURIComponent(it.title)}`;
           }
         }
-        const diffBtn = url ? `<a href="${esc(url)}" target="_blank" class="px-3 py-1 text-sm bg-sky-600 hover:bg-sky-500 rounded-md inline-block text-white no-underline">보기</a>` : '';
+
+        const diffBtn = url ? `<a href="${esc(url)}" target="_blank" class="px-3 py-1 text-sm bg-sky-600 hover:bg-sky-500 rounded-md inline-block text-white no-underline transition-colors shadow-sm">상세보기</a>` : '';
+
+        // Status Color
         const statusClass = it.status === 'NEW' ? 'text-green-400' : 'text-yellow-400';
-        // Use mapped status or original if not found
         const displayStatus = STATUS_MAP[it.status] || it.status_ko || it.status;
 
-        return `<tr>
-      <td class="p-3"><span class="${statusClass} font-bold">${displayStatus}</span></td>
-      <td class="p-3">${esc(it.kind)}</td>
-      <td class="p-3">${esc(it.title)}</td>
-      <td class="p-3">${esc(it.date)}</td>
-      <td class="p-3">${(it.detected_at_utc || "").slice(0, 10)}</td>
-      <td class="p-3">${diffBtn}</td>
+        // Kind Badge Color
+        let kindClass = "bg-gray-700 text-gray-200";
+        if (it.kind === '법령') kindClass = "bg-blue-900 text-blue-200 border border-blue-700";
+        else if (it.kind === '의안') kindClass = "bg-purple-900 text-purple-200 border border-purple-700";
+        else if (it.kind === '고시') kindClass = "bg-orange-900 text-orange-200 border border-orange-700";
+
+        // Date Formatting (Clean YYYY-MM-DD)
+        const dateStr = (it.date || "").replace(/(\d{4})(\d{2})(\d{2})/, "$1-$2-$3").replace(/\./g, "-");
+        // Detected Date (Parse UTC and show simply)
+        const detectedStr = (it.detected_at_utc || "").split("T")[0];
+
+        return `<tr class="border-b border-gray-700 hover:bg-gray-800 transition-colors">
+      <td class="p-3 text-center"><span class="${statusClass} font-bold">${displayStatus}</span></td>
+      <td class="p-3 text-center"><span class="px-2 py-1 rounded text-xs font-medium ${kindClass}">${esc(it.kind)}</span></td>
+      <td class="p-3 font-medium text-gray-200">${esc(it.title)}</td>
+      <td class="p-3 text-center text-gray-400 font-mono text-sm">${esc(dateStr)}</td>
+      <td class="p-3 text-center text-gray-500 font-mono text-xs">${detectedStr}</td>
+      <td class="p-3 text-center">${diffBtn}</td>
     </tr>`;
       }).join("");
       tb.innerHTML = rows;
